--- a/src/dbConfig.ini
+++ b/src/dbConfig.ini
@@ -1,4 +1,4 @@
-username=root
-password=mitra
-dbName=BankATM
-server=localhost
+username=john
+password=reallygoodpassword
+dbName=csc429_group_john
+server=dingusdong.us
